{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 27,
  "lineage": "ad58b960-cf8a-28fa-5838-4205a062c2b5",
  "resources": [
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:loadbalancer/app/dev-app-alb/956d553754cffd4a",
            "arn_suffix": "app/dev-app-alb/956d553754cffd4a",
            "dns_name": "dev-app-alb-1044938033.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:loadbalancer/app/dev-app-alb/956d553754cffd4a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-app-alb",
            "security_groups": [
              "sg-0fca5470fe556c75f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1da39675"
              },
              {
                "subnet_id": "subnet-2ca70b57"
              },
              {
                "subnet_id": "subnet-8947ddc5"
              }
            ],
            "subnets": [
              "subnet-1da39675",
              "subnet-2ca70b57",
              "subnet-8947ddc5"
            ],
            "tags": {
              "DeploymentIdentifier": "dev"
            },
            "vpc_id": "vpc-884c43e0",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ecs_cluster.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:listener/app/dev-app-alb/956d553754cffd4a/4678a69395ba39e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:targetgroup/dev-app-tg/3f2791ea8aa56d36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:listener/app/dev-app-alb/956d553754cffd4a/4678a69395ba39e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:loadbalancer/app/dev-app-alb/956d553754cffd4a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ecs_cluster.aws_lb.test",
            "module.ecs_cluster.aws_lb_target_group.test",
            "module.ecs_cluster.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:targetgroup/dev-app-tg/3f2791ea8aa56d36",
            "arn_suffix": "targetgroup/dev-app-tg/3f2791ea8aa56d36",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:547042525088:targetgroup/dev-app-tg/3f2791ea8aa56d36",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-884c43e0"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_db",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:547042525088:security-group/sg-01ffafaca9f1c242f",
            "description": "Allow inbound traffic to db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ffafaca9f1c242f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_db",
            "name_prefix": null,
            "owner_id": "547042525088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-884c43e0"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:547042525088:security-group/sg-0fca5470fe556c75f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fca5470fe556c75f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "547042525088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-884c43e0"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:547042525088:security-group/sg-00f0d2ec6235a5fff",
            "description": "deployment: dev, cluster: app",
            "egress": [],
            "id": "sg-00f0d2ec6235a5fff",
            "ingress": [],
            "name": "dev-app",
            "name_prefix": null,
            "owner_id": "547042525088",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "app",
              "DeploymentIdentifier": "dev",
              "Name": "dev-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-884c43e0"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_default_egress",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2772180627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f0d2ec6235a5fff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs_cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_default_ingress",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-605680059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f0d2ec6235a5fff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.ecs_cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_default_ingress_app",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3953253812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f0d2ec6235a5fff",
            "self": false,
            "source_security_group_id": null,
            "to_port": 34000,
            "type": "ingress"
          },
          "dependencies": [
            "module.ecs_cluster.aws_security_group.cluster"
          ]
        }
      ]
    }
  ]
}